--- a/estilo/projetos.css
+++ b/estilo/projetos.css
@@ -4,6 +4,7 @@
 body{
     font-family: '';
     background: linear-gradient(to right, rgba(0, 229, 236, 0.979),rgb(89, 248, 129));
+    background-image: url(../imagens/FUNDO.jpg);
 }
 header{
     width: 800px;
