--- a/estilo/contato.css
+++ b/estilo/contato.css
@@ -7,11 +7,13 @@ body{
     max-width: 800px;
     max-height: 600px;
     position: relative;
+    background-image: url(../imagens/FUNDO.jpg);
     
 }
 header{
     width:80% ;
     height: 400px;
+    gap: 0px 0px 0px 0px;
 }
 header img{
     width: 100px;
