--- a/estilo/curriculo.css
+++ b/estilo/curriculo.css
@@ -2,6 +2,7 @@ body{
     width: 800px;
     background: linear-gradient(to right, rgba(0, 229, 236, 0.979),rgb(89, 248, 129));
     background-image: url(../imagens/FUNDO.jpg);
+    background-repeat: no-repeat center center;
 }
 main{
     text-align: center;
@@ -11,7 +12,7 @@ main{
 }
 .frame{
     width: 450px;
-    height: 550px;
+    height: 600px;
     border: solid 1px black;
     margin: 48px 0px 0px 250px;
 }
