--- a/estilo/style.css
+++ b/estilo/style.css
@@ -11,7 +11,12 @@ body{
     height: 100%;
     font-family: "Orbitron";
     background: linear-gradient(to right, rgba(0, 229, 236, 0.979),rgb(89, 248, 129));
+    
+
     background-image: url(../imagens/FUNDO.jpg);
+    background-repeat: no-repeat  ;
+    background-size: cover ;
+    background-position: center center;
   
 }   
 header{
